--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     style="background-image: url('images/1.jpg')">
     <header class="text-white bg-black bg-opacity-50 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-          <a href = "http://127.0.0.1:5501/home.html" class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+          <a href = "https://piratehoax.github.io/home.github.io/" class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
             <img class="w-12 h-12 object-cover " src="images/icons8-pirate-100 (1).png" alt="blog">
             <span class="ml-3 text-xl">Pirate H04X</span>
           </a>
           <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
-            <a href = "http://127.0.0.1:5501/movies.html"class="mr-5 hover:text-gray-400">Movies</a>
+            <a href = "https://piratehoax.github.io/movies.github.io/"class="mr-5 hover:text-gray-400">Movies</a>
             <a href = "http://127.0.0.1:5501/tv-series.html"class="mr-5 hover:text-gray-400">TV Series</a>
             
           </nav>
